fix: missed typo

--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "doc:dev": "node ./scripts/pkg-script.js --script doc:dev --type editor",
     "doc": "node ./scripts/pkg-script.js --script doc --type editor",
     "publish:cdn": "node ./scripts/publish-cdn.js",
-    "prepare: "npm run build:all"
+    "prepare": "npm run build:all"
   },
   "workspaces": [
     "apps/*",
