fix: remove prepare script again

--- a/package.json
+++ b/package.json
@@ -82,8 +82,7 @@
     "build": "node ./scripts/pkg-script.js --script build --type $type",
     "doc:dev": "node ./scripts/pkg-script.js --script doc:dev --type editor",
     "doc": "node ./scripts/pkg-script.js --script doc --type editor",
-    "publish:cdn": "node ./scripts/publish-cdn.js",
-    "prepare": "npm run build:all"
+    "publish:cdn": "node ./scripts/publish-cdn.js"
   },
   "workspaces": [
     "apps/*",
